# ai-builders-week-5

./: .gitignore  README.md  baseline.ipynb  explore-data.ipynb  fine-tune-bert.ipynb  letterboxd_250movie_reviews_normalized_sampled.csv  main.py  ordinal-regression.ipynb  pyproject.toml
.ipynb_checkpoints/: explore-data-checkpoint.ipynb
